--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <!-- header -->
     <nav class="header">
-        <a href="/">United Users</a>
+        <a href="">United Users</a>
     </nav>
 
     <!-- main -->
